<resources>
    <string name="app_name">Rao vặt app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">182622975475466</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- My Strings -->
    <string name="pushingPostToolbar">Đăng bán</string>
    <string name="pushingPostLine1">Nhấp để chọn ảnh</string>
    <string name="pushingPostLine2">Danh mục</string>
    <string name="pushingPostHint1">Tiêu đề sản phẩm</string>
    <string name="pushingPostHint2">Danh mục</string>
    <string name="pushingPostHint3">Khu vực</string>
    <string name="pushingPostHint4">Địa chỉ giao dịch</string>
    <string name="pushingPostHint5">Tình trạng</string>
    <string name="pushingPostHint6">Giá bán</string>
    <string name="pushingPostHint7">Chi tiết về mặt hàng ... </string>

    <string name="postDetailLine1">Chất lượng</string>
    <string name="postDetailLine2">Danh mục</string>
    <string name="postDetailLine3">Khu vực</string>
    <string name="postDetailLine4">Địa chỉ giao dịch</string>
    <string name="postDetaiTitle1">Có thể bạn quan tâm</string>


    <string name="continued">Tiếp tục</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="pulldown_scrollview">PulldownScrollView</string>
    <string name="stretch_scrollview">StretchScrollView</string>
    <string name="add_attention"></string>
    <string name="user_post"></string>
    <string name="user_book"></string>
    <string name="user_name"></string>
    <string name="user_des"></string>
    <string name="user_recommend_tip"></string>


</resources>
