<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pushing_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    tools:context="poly.fall16.pro2051.group8.raovat.activities.PushingPostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBackButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back_50px_white_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/pushingPostToolbar"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_border_button"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/layoutPushImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30px"
                android:background="@drawable/custom_border_camera"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvImgItems"
                        android:layout_width="300dp"

                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical">

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/largeSelect"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/ic_camera_100px_pink" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="25dp"
                        android:text="@string/pushingPostLine1"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="90dp"
                    android:id="@+id/addPictureView"
                    android:layout_width="85dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_border_button_add_pic"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2.5dp"
                        android:src="@drawable/ic_add_camera_2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Thêm hình" />

                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pushingPostHint1"
                    android:paddingLeft="5dp"
                    android:textCursorDrawable="@drawable/text_cursor_cyan"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="30"
                    app:met_primaryColor="@color/indigo_500"
                    android:id="@+id/materialEditText" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pushingPostHint2"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/indigo_500" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pushingPostHint3"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/indigo_500" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pushingPostHint4"
                    android:paddingLeft="5dp"
                    android:textCursorDrawable="@drawable/text_cursor_cyan"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="30"
                    app:met_primaryColor="@color/indigo_500" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pushingPostHint5"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/indigo_500" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/etPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789.,"
                        android:hint="@string/pushingPostHint6"
                        android:inputType="numberDecimal|numberSigned"
                        android:maxLength="13"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="200"
                        app:met_primaryColor="@color/indigo_500" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/etPrice"
                        android:layout_alignBottom="@+id/etPrice"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="13dp"
                        android:layout_marginRight="13dp"
                        android:text="VNĐ" />
                </RelativeLayout>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pushingPostHint7"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textCursorDrawable="@drawable/text_cursor_cyan"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="300"
                    app:met_primaryColor="@color/indigo_500" />


            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custom_border_button_red"
                android:text="@string/continued"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>
