<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserInfomationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/scroll_view_head"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_marginTop="100dp"
            android:background="@color/transparent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="27dp"
                android:background="@drawable/card_avatar_bar">

                <TextView
                    android:id="@+id/attention_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_btn"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="21dp"
                    android:layout_marginTop="6dp"
                    android:drawablePadding="3dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center_vertical"
                    android:text="Thêm"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/user_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="103dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/user_post"
                    android:textSize="12sp"
                    />

                <TextView
                    android:id="@+id/user_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="103dp"
                    android:layout_below="@id/user_post"
                    android:layout_marginTop="4dp"
                    android:text="@string/user_book"
                    android:textSize="12sp"
                    android:textColor="#A1A1A1" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:padding="1px"
                android:background="@android:color/white"
                android:layout_marginLeft="21dp"
                android:contentDescription="@null"
                android:src="@drawable/avatar_default" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user_avatar"
                android:layout_marginLeft="13dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:shadowColor="@android:color/black"
                android:shadowDx="3.0"
                android:shadowDy="3.0"
                android:shadowRadius="5.0"
                android:text="@string/user_name"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <FrameLayout
                android:id="@+id/user_divider_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_avatar"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@null"
                    android:background="#DFDFDF" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="29dp"
                    android:contentDescription="@null"
                    android:src="@drawable/arrow_up" />
            </FrameLayout>

            <TextView
                android:id="@+id/user_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_divider_layout"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/user_des"
                android:textSize="12sp"
                android:textColor="#B1B1B1" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:background="#F7F4F0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="13dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/user_recommend_tip"
                android:textSize="12sp"
                android:textColor="#A1A1A1" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

